--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+# Spring show SQL
+# spring.jpa.show-sql=true
 
+# Enable/disable spring devtools
+spring.devtools.restart.enabled=true
+# Devtools property defaults active! Set 'spring.devtools.add-properties' to 'false' to disable
+spring.devtools.add-properties=true
+
+
+# Logging for debugging spring security
+logging.level.com.blurdel.sdjpa=DEBUG
+
+
+# Show SQL
+spring.jpa.properties.hibernate.show_sql=true
+# Format SQL
+spring.jpa.properties.hibernate.format_sql=true
+# Show bind parameters
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.h2.console.enabled=true
