Set spring-parent to same Spring Milestone release as SFG so SQL logging works ok

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 # spring.jpa.show-sql=true
 
 # Enable/disable spring devtools
-spring.devtools.restart.enabled=true
+#spring.devtools.restart.enabled=true
 # Devtools property defaults active! Set 'spring.devtools.add-properties' to 'false' to disable
-spring.devtools.add-properties=true
+#spring.devtools.add-properties=true
 
 
 # Logging for debugging spring security
-logging.level.com.blurdel.sdjpa=DEBUG
+#logging.level.com.blurdel.sdjpa=DEBUG
 
 
 # Show SQL
