--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,11 @@
 
 # Show SQL
 spring.jpa.properties.hibernate.show_sql=true
+
 # Format SQL
 spring.jpa.properties.hibernate.format_sql=true
-# Show bind parameters
+
+# Show bind values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.h2.console.enabled=true
