--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,11 @@
-# Spring show SQL
-# spring.jpa.show-sql=true
+
+# Logging for debugging spring security
+#logging.level.com.blurdel.sdjpa=DEBUG
 
 # Enable/disable spring devtools
 #spring.devtools.restart.enabled=true
 # Devtools property defaults active! Set 'spring.devtools.add-properties' to 'false' to disable
 #spring.devtools.add-properties=true
-
-
-# Logging for debugging spring security
-#logging.level.com.blurdel.sdjpa=DEBUG
 
 
 # Show SQL
@@ -21,3 +18,11 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.h2.console.enabled=true
+
+# H2 MySql compatibility mode
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
