Setup init.mode for both databases so schema.sql is always run for both databases (MySql, H2)

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,4 +2,7 @@ spring.datasource.username=bookadmin
 spring.datasource.password=password
 spring.datasource.url=jdbc:mysql://172.17.0.2:3306/bookdb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+
+# By default init.mode only for embedded databases; tell Spring to always run schema.sql (for H2 and MySql)
+spring.sql.init.mode=always
