--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+# REMEMBER to Set active Profile: ie: local for MySql
+#spring.profiles.active=local
+
 # Logging for debugging spring security
 #logging.level.com.blurdel.sdjpa=DEBUG
 
