Added Author Entity; updated profile name from local to mysql

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
 	</dependencies>
 
 
-<!-- Video 37- Add a profile to use H2 without the "local" profile specified. Set "h2" in Project Properties|maven -->
+<!-- Video 37- Add a profile to use H2 without the "mysql" profile specified. Set "h2" in Project Properties|maven -->
 	<profiles>
 		<profile>
 			<id>h2</id>
