--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-# REMEMBER to Set active Profile: ie: local for MySql
-#spring.profiles.active=local
+# REMEMBER to Set active Profile: ie: mysql for MySql
+spring.profiles.active=mysql
 
 # Logging for debugging spring security
 #logging.level.com.blurdel.sdjpa=DEBUG
@@ -29,4 +29,6 @@ spring.datasource.password=password
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
+
+# Run the 
 spring.jpa.defer-datasource-initialization=false
