Updates for primary keys; created AuthorUuid to demo varchar UUID being saved

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
+<!-- Database migration tool
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
+-->
 		<!-- Dev Tools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
